fix h1, vh to em for consistant look on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -165,11 +165,11 @@ h1 {
   font-family: "Major Mono Display", monospace;
   font-weight: 400;
   font-style: normal;
-  font-size: 4vh;
+  font-size: 2.2em;
 }
 
 .title {
-  font-size: 6vh;
+  font-size: 3.2em;
 }
 
 h2 { 
@@ -340,31 +340,6 @@ button:hover{
   font-style: italic;
 }
 
-/* 
-#sideways-scroller {
-  width: 100%;
-  overflow-x: scroll;
-  white-space: nowrap; 
-  display: flex; 
-  flex-direction: row;
-  max-height: 70vh;
-}
-se
-.scroller-content {
-  flex: 0 0 auto; 
-  max-width: 50vw;
-  max-height: 100%;
-  background-color: #ccc;
-  margin-right: 10px;
-  scroll-snap-align: start;
-}
-
-#sideways-scroller > .art-card > .art-images {
-  max-width: 90%;
-  max-height: 90%;
-}
-*/
-
 
 @media screen and (min-width: 1500px) {
   .art-card {
@@ -392,7 +367,16 @@ se
     width: 95%;
     min-height: auto;
   }
-  /* .hacker-font * {
-    font-size: 2vh;
-  } */
+  
+  h1 { 
+    font-family: "Major Mono Display", monospace;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 2em;
+  }
+
+  .title {
+    font-size: 3em;
+  }
+  
 }
